--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0"
+  },
+  "engines": {
+    "node": "14.11.0",
+    "npm": "6.14.8"
   }
 }
