--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dns": "^0.2.2",
+    "dotenv": "^8.2.0",
+    "expres": "0.0.5",
+    "nodemailer": "^6.4.13",
+    "nodemon": "^2.0.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.0.1",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.12",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
